--- a/Fundamentales DB a Excel.ipynb
+++ b/Fundamentales DB a Excel.ipynb
@@ -2943,7 +2943,6 @@
     "lista_periodo_turnos = query.execute(f\"SELECT emisora, periodo FROM fundamentales\")\n",
     "lista_periodo_turnos = query.fetchall()\n",
     "\n",
-    "#query = db.cursor(dictionary=True)\n",
     "query.execute(\"SELECT * FROM emisoras\")\n",
     "todas_emisoras_bruto = query.fetchall()\n",
     "db.close()\n",
@@ -3002,7 +3001,7 @@
     "            pass\n",
     "\n",
     "\n",
-    "        #Estado de Resultados\n",
+    "        #Estado de Resultados YTD y Trimestre\n",
     "        try:\n",
     "            worksheet_resultados_ytd.write(0,0,nombre_emisora, negritas_centrado)\n",
     "            worksheet_resultados_ytd.write(0,2,f'Cifras en {moneda}',centrado)\n",
