--- a/Fundamentales Web a DB Update Automatico.ipynb
+++ b/Fundamentales Web a DB Update Automatico.ipynb
@@ -47,7 +47,7 @@
       "La emisora ('VALUEGF', 'VALUE GRUPO FINANCIERO, S.A.B. DE C.V.') no se encuentra en la lista de links disponibles\n",
       "La emisora ('DLRTRAC', 'ACTINVER CASA DE BOLSA, S.A. DE C.V., GRUPO FINANCIERO ACTINVER, DIVISIÓN FIDUCIARIA') no se encuentra en la lista de links disponibles\n",
       "La emisora ('PSOTRAC', 'ACTINVER CASA DE BOLSA, S.A. DE C.V., GRUPO FINANCIERO ACTINVER, DIVISIÓN FIDUCIARIA') no se encuentra en la lista de links disponibles\n",
-      "-> La Base de Datos se ecuentra actualizada\n"
+      "-> La Base de Datos se encuentra actualizada\n"
      ]
     }
    ],
@@ -303,7 +303,7 @@
     "                continue                \n",
     "    else:\n",
     "        print(f\"La emisora {emisora} no se encuentra en la lista de links disponibles\")\n",
-    "print(\"-> La Base de Datos se ecuentra actualizada\")"
+    "print(\"-> La Base de Datos se encuentra actualizada\")"
    ]
   },
   {
