--- a/Fundamentales Web a Excel Individual (new).ipynb
+++ b/Fundamentales Web a Excel Individual (new).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -41,10 +41,9 @@
       "____________________________________________________________\n",
       "\n",
       "\n",
-      "Procesando GMEXICO del periodo 2T_2021\n",
+      "Procesando ALSEA del periodo 2T_2021\n",
       "\n",
-      "\n",
-      "EEFF Disponible en: /media/veracrypt1/Documentos/Proyectos/Scripts/Python/Trading/Carga/Fundamentales/GMEXICO/GMEXICO_2T_2021_EstadosFinancieros.xlsx\n"
+      "\n"
      ]
     }
    ],
